# dice_rolling_API

./: README.md  dice_roll.py  pyproject.toml
src/: main.py
src/dice_logic/: die.py  rpg_die.py
src/routes/: api.py
src/routes/utils/: util_functions.py
